--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                     <a class="article-but" href="">Детальніше</a>
                 </article>
             </section>
-            <img src="/uploads/2021/02/mobile-phone-1419275_1920_0_1613586010.jpg" width="100%" height="270"/>
+           <img src="https://cdn.pixabay.com/photo/2019/10/01/09/01/vpn-4517623_1280.jpg" width="100%" height="370px"/>
         </main>
         <footer>
-            <a href=""><img src="/uploads/2021/02/icon-set-1142000_1280%201_0_1613586391.png" width="80px" height="80px"></a>
-            <a href=""><img src="/uploads/2021/02/instagram-3288419_1280%201_0_1613586391.png" width="80px" height="80px"></a>
+            <a href=""><img src="https://cdn.pixabay.com/photo/2017/10/04/11/58/facebook-2815970_1280.jpg" width="80px" height="80px"></a>
+            <a href=""><img src="https://play-lh.googleusercontent.com/DDfeXsEfDPgnOdvwHT_zm4LEcXKUPpQyRkeZUl2APC9rJqX3efpgLDZDd6kQeo4c0ao" width="80px" height="80px"></a>
             <p><b>Напиши - отримай <br/> промокод!</b></p> 
         </footer>
     </body>
